@@ -2,6 +2,6 @@
 Name=Barrage
 Comment=A rather destructive action game.
 Exec=barrage
-Icon=
+Icon=barrage
 Type=Application
 Categories=Game;
